<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/mb">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="4">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_marginTop="20dp"
            android:background="#00000000">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo">

            </ImageView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/HB"
            android:layout_width="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_margin="12dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            app:cardBackgroundColor="#4D000000"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="3dp"
                android:layout_margin="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/house_business"
                    android:textColor="@color/white"
                    android:shadowColor="@color/purple_200"
                    android:textSize="30sp"
                    tools:ignore="RtlHardcoded"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <Button
                        android:id="@+id/b1"
                        android:maxLines="@integer/google_play_services_version"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:background="#80000000"
                        android:layout_margin="4dp"
                        android:text="@string/bills"
                        android:visibility="visible"
                        app:cornerRadius="@dimen/browser_actions_context_menu_min_padding"
                        app:elevation="3dp"
                        app:iconPadding="3dp"
                        android:textColor="@color/design_default_color_secondary"
                        app:strokeColor="#4D000000"
                        style="?android:attr/buttonBarButtonStyle">

                    </Button>

                    <Button
                        android:id="@+id/b2"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:layout_margin="4dp"
                        android:background="#80000000"
                        android:textColor="@color/design_default_color_secondary"
                        android:text="@string/motions"
                        app:cornerRadius="2dp">

                    </Button>
                </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <Button
                            android:id="@+id/b3"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="100dp"
                            android:layout_height="60dp"
                            android:textColor="@color/design_default_color_secondary"
                            android:layout_margin="4dp"
                            android:background="#80000000"
                            android:padding="3dp"
                            android:text="@string/hansard">

                        </Button>

                    <Button
                        android:id="@+id/b4"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:text="@string/acts"
                        android:textColor="@color/design_default_color_secondary"
                        android:textColorHighlight="@color/design_default_color_secondary"
                        android:layout_margin="4dp"
                        android:background="#80000000"
                        style="?android:attr/buttonBarButtonStyle">

                    </Button>
                    </LinearLayout>





            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="10dp"
            android:layout_row="2"
            android:background="@color/transparent"
            app:cardBackgroundColor="#4D000000">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/leaders"
                    android:textColorHighlight="@color/purple_200"
                    android:textColorHint="@color/purple_200"
                    android:shadowColor="@color/purple_200"
                    android:textColor="@color/white"
                    android:textSize="30sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/b5"
                        android:layout_width="100dp"
                        android:layout_margin="4dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="center"
                        android:background="#80000000"
                        android:text="@string/mcas"
                        android:textColor="@color/design_default_color_secondary"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_marginStart="20dp">

                    </Button>

                    <Button
                        android:id="@+id/b6"
                        android:layout_width="100dp"
                        android:layout_margin="4dp"
                        android:layout_height="60dp"
                        android:textColor="@color/design_default_color_secondary"
                        android:background="#80000000"
                        android:text="@string/leadership"
                        style="?android:attr/buttonBarButtonStyle">

                    </Button>

                    <Button
                        android:id="@+id/butt00"
                        android:layout_width="100dp"
                        android:layout_margin="4dp"
                        android:layout_height="60dp"
                        android:background="#80000000"
                        android:textColor="@color/design_default_color_secondary"
                        android:text="@string/committees"
                        style="?android:attr/buttonBarButtonStyle">

                    </Button>


                </LinearLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="10dp"
            android:layout_row="3"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            app:cardBackgroundColor="#4D000000">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imagebutt1"
                    android:layout_width="60dp"
                    android:background="#80000000"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_calendar_today_24">

                </ImageButton>

                <ImageButton
                    android:id="@+id/imagebutt2"
                    android:layout_gravity="center"
                    android:layout_width="60dp"
                    android:background="#80000000"
                    android:layout_height="60dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_baseline_video_library_24">

                </ImageButton>

            <Button
                android:layout_width="match_parent"
                android:id="@+id/tender"
                android:layout_height="60dp"
                android:background="#80000000"
                android:text="@string/tenders"
                android:textSize="20sp"
                android:textColor="@color/design_default_color_secondary"
                android:contentDescription="@string/todo">

            </Button>



            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/news"
            android:layout_width="match_parent"
            app:cardCornerRadius="10dp"
            android:layout_margin="12dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            app:cardBackgroundColor="#4D000000"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textColor="@color/white"
                android:pointerIcon="alias"
                android:textSize="30sp">

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latest_news_news_and_ccomments_from_the_assembly"
                android:layout_marginLeft="40dp"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginStart="40dp">

            </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>
</ScrollView>